# DS_chat_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 20260528_0001_create_mvp_tables.py
src/ds_chat_bot/: __init__.py  callbacks.py  config.py  discovery.py  handlers.py  keyboards.py  main.py  profile_handlers.py  profile_utils.py  services.py
src/ds_chat_bot/db/: __init__.py  base.py  constants.py  models.py  session.py
tests/: test_config.py  test_db_constants.py  test_db_models.py  test_db_session.py  test_discovery.py  test_handlers_menu.py  test_imports.py  test_keyboards.py  test_profile_utils.py  test_services.py
