[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-chat-bot"
version = "0.1.0"
description = "Telegram bot skeleton for the Давай сконнектимся community"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
